--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "electron": "^12.0.5",
     "electron-builder": "^22.10.5",
     "electron-is-dev": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jwt": "^1.1.2",
     "react-scripts": "4.0.3",
     "wait-on": "^5.3.0",
     "web-vitals": "^1.0.1"
