--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -23,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-json-to-csv": "^1.0.4",
     "react-jwt": "^1.1.2",
     "react-scripts": "4.0.3",
     "wait-on": "^5.3.0",
